--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 body{
-	background:
-	radial-gradient(black 15%, transparent 16%) 0 0,
-	radial-gradient(black 15%, transparent 16%) 8px 8px,
-	radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-	radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-	background-color:#282828;
-	background-size:16px 16px;
+	background-color: #36465d;
+	color: #141823;
 }
 
 .title{
@@ -16,17 +11,13 @@ body{
 .msg{
 	background: linear-gradient(to bottom, #8dd2d9, #58c0c7) repeat scroll 0 0 rgba(0, 0, 0, 0);
 	border: 1px solid;
-	width: 500px;
 	border-radius: 10px;
 }
 
 .date{
 	float: right;
 	right: 0px;
-	margin-left: 20px;
 	margin-right: 20px;
-	margin-top: 20px;
-	margin-bottom: 20px;
 }
 
 .text{
@@ -36,12 +27,4 @@ body{
 	margin-bottom: 20px;
 }
 
-.myline{
-	float: right;
-	width: 500px;
-}
 
-#log{
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
