--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .msg{
-	background: linear-gradient(to bottom, #8dd2d9, #58c0c7) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background: linear-gradient(to bottom, #8dd2d9, #e9eaed) repeat scroll 0 0 rgba(0, 0, 0, 0);
 	border: 1px solid;
 	border-radius: 10px;
 }
@@ -25,6 +25,12 @@ body{
 	margin-right: 20px;
 	margin-top: 20px;
 	margin-bottom: 20px;
+}
+
+.icon{
+	margin-left: 95%;
+	height: 65px;
+    width: 65px;
 }
 
 
